tests/ui/lint/snapshots/manual_contains_string_slice.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `contains`
   ╭─[test.lis:4:11]
 3 │   let names = ["a", "b"]
 4 │   let _ = names.any(|s| s == "b")
   ·           ───────────┬───────────
   ·                      ╰── can be simpler
 5 │ }
   ╰────
  help: Replace `.any(|x| x == value)` with `.contains(value)` · code: [lint.manual_contains]
