tests/ui/lint/snapshots/manual_contains_value_on_left.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `contains`
   ╭─[test.lis:4:11]
 3 │   let xs = [1, 2, 3, 4]
 4 │   let _ = xs.any(|x| 3 == x)
   ·           ─────────┬────────
   ·                    ╰── can be simpler
 5 │ }
   ╰────
  help: Replace `.any(|x| x == value)` with `.contains(value)` · code: [lint.manual_contains]
