tests/ui/lint/snapshots/manual_equal_fold_aliased_import.snap
---
source: tests/ui/lint/mod.rs
---
  ● Inefficient string comparison
   ╭─[test.lis:7:11]
 6 │   let b = "hELLO"
 7 │   let _ = mystrings.ToLower(a) == mystrings.ToLower(b)
   ·           ──────────────────────┬─────────────────────
   ·                                 ╰── can use `strings.EqualFold`
 8 │ }
   ╰────
  help: Use `mystrings.EqualFold(a, b)` to compare case-insensitively in one call · code: [lint.manual_equal_fold]
