tests/ui/lint/snapshots/manual_equal_fold_to_upper.snap
---
source: tests/ui/lint/mod.rs
---
  ● Inefficient string comparison
   ╭─[test.lis:7:11]
 6 │   let b = "hELLO"
 7 │   let _ = strings.ToUpper(a) == strings.ToUpper(b)
   ·           ────────────────────┬───────────────────
   ·                               ╰── can use `strings.EqualFold`
 8 │ }
   ╰────
  help: Use `strings.EqualFold(a, b)` to compare case-insensitively in one call · code: [lint.manual_equal_fold]
